[gd_scene load_steps=29 format=3 uid="uid://bby0quyyjfjai"]

[ext_resource type="Texture2D" uid="uid://dvtmdgcwcyxmk" path="res://assets/PNG/Dark/texture_03.png" id="1_rxiej"]
[ext_resource type="Script" uid="uid://buxje3md7twd4" path="res://scripts/player_fps.gd" id="1_xby0o"]
[ext_resource type="Texture2D" uid="uid://bxta387f04ag1" path="res://assets/PNG/Light/texture_06.png" id="2_r6ftr"]
[ext_resource type="Script" uid="uid://d3vgvd142746t" path="res://scripts/gun_manager.gd" id="4_3na6w"]
[ext_resource type="Texture2D" uid="uid://dnad56j0al4df" path="res://assets/PNG/Dark/texture_11.png" id="4_jgv2g"]
[ext_resource type="PackedScene" uid="uid://dp8cr2degehu4" path="res://scenes/hud.tscn" id="5_fh3vb"]
[ext_resource type="PackedScene" uid="uid://duqatgr4rsk46" path="res://scenes/gun_display.tscn" id="5_iq32i"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_uo3gr"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_iq32i"]
height = 1.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0gvln"]
albedo_texture = ExtResource("1_rxiej")
uv1_triplanar = true

[sub_resource type="CapsuleMesh" id="CapsuleMesh_bfjn3"]
material = SubResource("StandardMaterial3D_0gvln")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_bn4h4"]
albedo_texture = ExtResource("2_r6ftr")
uv1_triplanar = true

[sub_resource type="BoxMesh" id="BoxMesh_sen8m"]
material = SubResource("StandardMaterial3D_bn4h4")
size = Vector3(0.75, 0.2, 0.5)

[sub_resource type="BoxMesh" id="BoxMesh_fh3vb"]
size = Vector3(0.1, 0.1, 0.7)

[sub_resource type="BoxMesh" id="BoxMesh_0enxy"]
size = Vector3(0.1, 0.4, 0.1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_iq32i"]
albedo_texture = ExtResource("4_jgv2g")
uv1_triplanar = true

[sub_resource type="BoxMesh" id="BoxMesh_rxiej"]
material = SubResource("StandardMaterial3D_iq32i")
size = Vector3(1, 1, 0.25)

[sub_resource type="CylinderMesh" id="CylinderMesh_r6ftr"]
material = SubResource("StandardMaterial3D_iq32i")
height = 1.0
radial_segments = 10

[sub_resource type="Animation" id="Animation_fh3vb"]
length = 0.001

[sub_resource type="Animation" id="Animation_iq32i"]
resource_name = "fire"
length = 0.7

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0enxy"]
_data = {
&"RESET": SubResource("Animation_fh3vb"),
&"fire": SubResource("Animation_iq32i")
}

[sub_resource type="Gradient" id="Gradient_iq32i"]
offsets = PackedFloat32Array(0.247423, 0.757732)
colors = PackedColorArray(0.359069, 0.359069, 0.359069, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_fh3vb"]
gradient = SubResource("Gradient_iq32i")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_0enxy"]
lifetime_randomness = 0.09
gravity = Vector3(0, 0, 0)
scale_min = 0.5
scale_max = 0.75
scale_over_velocity_min = 2.0
scale_over_velocity_max = 4.0
color_ramp = SubResource("GradientTexture1D_fh3vb")

[sub_resource type="SphereMesh" id="SphereMesh_88axs"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_iq32i"]
scale_min = 0.2
scale_max = 0.5
collision_mode = 1
collision_friction = 0.0
collision_bounce = 0.09

[sub_resource type="SphereMesh" id="SphereMesh_0enxy"]

[sub_resource type="SeparationRayShape3D" id="SeparationRayShape3D_fh3vb"]
length = 0.5

[node name="PlayerFps" type="CharacterBody3D" groups=["player"]]
collision_layer = 3
script = ExtResource("1_xby0o")
metadata/name = "self"

[node name="stairCheckParent" type="Node3D" parent="."]

[node name="upper" type="CollisionShape3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.06469, 0)
shape = SubResource("CapsuleShape3D_uo3gr")

[node name="lower" type="CollisionShape3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.506594, 0)
shape = SubResource("CapsuleShape3D_iq32i")
disabled = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.999973, 0)
visible = false
mesh = SubResource("CapsuleMesh_bfjn3")

[node name="gun_manager" type="Node" parent="."]
script = ExtResource("4_3na6w")

[node name="head" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.53647, 0)

[node name="grapPoint" type="Node3D" parent="head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.6710835)

[node name="Camera3D" type="Camera3D" parent="head"]
fov = 140.0
near = 0.2

[node name="gun_display" parent="head/Camera3D" instance=ExtResource("5_iq32i")]
transform = Transform3D(1, 0, 0, 0, 0.997564, -0.0697565, 0, 0.0697565, 0.997564, 0, -0.43647, -0.268128)
visible = false

[node name="CanvasLayer" type="CanvasLayer" parent="head/Camera3D"]

[node name="hud" parent="head/Camera3D/CanvasLayer" instance=ExtResource("5_fh3vb")]
unique_name_in_owner = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.409015)
mesh = SubResource("BoxMesh_sen8m")

[node name="SubViewport" type="SubViewport" parent="head"]

[node name="Camera3D" type="Camera3D" parent="head/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, -0.268128)

[node name="RayCast3D" type="RayCast3D" parent="head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.6172138)
target_position = Vector3(0, 0, -5)
hit_from_inside = true

[node name="shoot_point" type="Node3D" parent="head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.32153535, -1.1514773)

[node name="MeshInstance3D" type="MeshInstance3D" parent="head/shoot_point"]
transform = Transform3D(1.4827573, 0, 0, 0, 1.1563551, 0, 0, 0, 1.0563363, 0, 0, 0)
mesh = SubResource("BoxMesh_fh3vb")

[node name="MeshInstance3D" type="MeshInstance3D" parent="head/shoot_point/MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, 0.8374613, 0.5464967, 0, -0.5464967, 0.8374613, 0, -0.14986265, 0.27079797)
mesh = SubResource("BoxMesh_0enxy")

[node name="extra" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.048, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="extra"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.414909)
mesh = SubResource("BoxMesh_rxiej")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="extra"]
transform = Transform3D(0.5, 0, 0, 0, 0.012251, 0.49985, 0, -0.49985, 0.012251, 0.315606, -0.0519292, 0.279064)
mesh = SubResource("CylinderMesh_r6ftr")

[node name="hud" type="CanvasLayer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_0enxy")
}

[node name="GPUParticles3D" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.212078, 0)
emitting = false
amount = 10
lifetime = 0.35
trail_lifetime = 0.23
process_material = SubResource("ParticleProcessMaterial_0enxy")
draw_pass_1 = SubResource("SphereMesh_88axs")

[node name="jump_particels" type="GPUParticles3D" parent="."]
emitting = false
amount = 10
lifetime = 0.35
one_shot = true
process_material = SubResource("ParticleProcessMaterial_iq32i")
draw_pass_1 = SubResource("SphereMesh_0enxy")

[node name="stair_check" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.031375818, -0.99950767, 0, 0.99950767, 0.031375818, 0, 0.5319425, -0.5833064)
shape = SubResource("SeparationRayShape3D_fh3vb")

[node name="stair_check2" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.031375818, -0.99950767, 0, 0.99950767, 0.031375818, 0, 0.5319425, 0.5437109)
shape = SubResource("SeparationRayShape3D_fh3vb")

[node name="stair_check3" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.031375818, -0.99950767, 0, 0.99950767, 0.031375818, 0.59973896, 0.5319425, 0.0072793365)
shape = SubResource("SeparationRayShape3D_fh3vb")

[node name="stair_check4" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.031375818, -0.99950767, 0, 0.99950767, 0.031375818, -0.60797906, 0.5319425, 0.0072793365)
shape = SubResource("SeparationRayShape3D_fh3vb")
